syntax = "proto3";
package apitracking.apitracking;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "apitracking/params.proto";
import "apitracking/apirequest.proto";
// this line is used by starport scaffolding # 1

option go_package = "apitracking/x/apitracking/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/apitracking/apitracking/params";
  }
  // Queries a Apirequest by id.
	rpc Apirequest(QueryGetApirequestRequest) returns (QueryGetApirequestResponse) {
		option (google.api.http).get = "/apitracking/apitracking/apirequest/{id}";
	}

	// Queries a list of Apirequest items.
	rpc ApirequestAll(QueryAllApirequestRequest) returns (QueryAllApirequestResponse) {
		option (google.api.http).get = "/apitracking/apitracking/apirequest";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetApirequestRequest {
	uint64 id = 1;
}

message QueryGetApirequestResponse {
	Apirequest Apirequest = 1 [(gogoproto.nullable) = false];
}

message QueryAllApirequestRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllApirequestResponse {
	repeated Apirequest Apirequest = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
